# aletheia-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md  task.md
.github/workflows/: ci.yml
configs/: project.yaml
configs/benchmark/: case_schema.yaml  fault_types.yaml
configs/evaluation/: diagnosis_variants.yaml  metrics.yaml  openai_pilot.yaml  p1_g6b_openai.yaml
docs/: 02_EVAL_FIRST_VERTICAL_SLICE.md  03_BENCHMARK_PROTOCOL.md  04_EVIDENCE_SCHEMA.md  05_DATASET_CARD.md  benchmark-protocol.md  dataset-card.md  evaluation-protocol.md  evidence-contract.md  p1-feasibility-report.md  related-work.md
docs/adr/: 0001-eval-first-core.md  0001-openai-model-lock.md  0002-p1-g6b-openai-model-lock.md
examples/data_drift_case/: evidence_bundle.example.json  failure_summary.md
reports/p1/: README.md  p1-final-closeout.json  p1-machine-result.json  p1-result-lock.json
scripts/: check_repo_hygiene.py  create_case_manifest.py  download_dataset.py  export_report_tables.py  run_benchmark.py  run_diagnosis.py  run_evaluation.py  run_vertical_slice.py
src/aletheia_lab/: __init__.py  __main__.py  cli.py  config.py
tests/: conftest.py
tests/fixtures/: minimal_case.json  sample_evidence.json
tests/integration/: test_baseline_reproducibility.py  test_p1_generator_realdata.py  test_project_config.py  test_vertical_slice_smoke.py
tests/unit/: test_baseline_loader.py  (+25 more)
(+67 files in other folders)
